--- a/FoodMarket/src/main/webapp/index.html
+++ b/FoodMarket/src/main/webapp/index.html
@@ -4,7 +4,7 @@
 	<title>Food Market</title>
 	<link rel="stylesheet" type="text/css" href="style/LoginPage.css">
 	<link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Paprika' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Snippet' rel='stylesheet'>
 </head>
 <body>
 
