--- a/FoodMarket/src/main/webapp/Register.html
+++ b/FoodMarket/src/main/webapp/Register.html
@@ -1,13 +1,9 @@
 <html>
     <head>
-    <script type="text/javascript" src="Register.js"></script>
-            <script>
-
-
-            </script>
-            <link rel="stylesheet" type="text/css" href="style/Register.css">
-	        <link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet'>
-	        <link href='https://fonts.googleapis.com/css?family=Snippet' rel='stylesheet'>
+        <script type="text/javascript" src="Login.js"></script>
+        <link rel="stylesheet" type="text/css" href="style/Register.css">
+	    <link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet'>
+	    <link href='https://fonts.googleapis.com/css?family=Snippet' rel='stylesheet'>
     </head>
     <body>
         <p></p>
