--- a/FoodMarket/src/main/webapp/index.html
+++ b/FoodMarket/src/main/webapp/index.html
@@ -12,12 +12,12 @@
 	<div class="container">
 	<h1>Food Market</h1>
 
-	<label>Email:</label><input type="Text" name="email" id="email"><br>
+	<label>Username:</label><input type="Text" name="username" id="username"><br>
 
 	<label>Password:</label><input type="Password" name="pass" id="pass"><br><br>
 
     <div class="button">
-	<input type="button" onclick="login(document.getElementById('email').value, document.getElementById('pass').value)" value="Login">
+	<input type="button" onclick="login(document.getElementById('username').value, document.getElementById('pass').value)" value="Login">
 	<input type="button" onclick="window.location.href='Register.html'" value="Register">
 	</div>
     </div>
