--- a/FoodMarket/src/main/webapp/Landing.html
+++ b/FoodMarket/src/main/webapp/Landing.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<script type="text/javascript" src="Landing.js"></script>
+<link rel="stylesheet" type="text/css" href="style/Landing.css">
+<link href='https://fonts.googleapis.com/css?family=Snippet' rel='stylesheet'>
 </head>
 <body>
-
+<div class="topnav">
+  <a href="Landing.html">FoodMarket</a>
+  <a href="AddItem.html">Add Item</a>
+  <a href="UpdateInfo.html">Add Info</a>
+  <div class="search-container">
+      <input type="text" placeholder="Search.." name="search">
+      <input type="button" value="Submit">
+  </div>
+</div>
+<h2>Available Products</h2>
+<div class="grid-container" id="grid">
+</div>
 </body>
 </html>
