--- a/FoodMarket/src/main/webapp/UpdateInfo.html
+++ b/FoodMarket/src/main/webapp/UpdateInfo.html
@@ -8,6 +8,11 @@
 <script type="text/javascript" src="UpdateInfo.js"></script>
 </head>
 <body>
+<div class="topnav">
+  <a href="Landing.html">FoodMarket</a>
+  <a href="AddItem.html">Add Item</a>
+  <a href="UpdateInfo.html">Add Info</a>
+</div>
 <label>Contact Number:</label> <input type="text" id="contact number">
 <label>House Name/Number:</label><input type="text" id="House_No">
 <label>Street: </label><input type="text" id="Street">
