--- a/FoodMarket/src/main/webapp/AddItem.html
+++ b/FoodMarket/src/main/webapp/AddItem.html
@@ -9,11 +9,8 @@
   <a href="Landing.html">FoodMarket</a>
   <a href="AddItem.html">Add Item</a>
   <a href="UpdateInfo.html">Add Info</a>
-  <div class="search-container">
-      <input type="text" placeholder="Search.." name="search">
-      <input type="button" value="Submit">
-  </div>
 </div>
+<div id="additem">
 <label>Name:</label><input type="text" id="ItemName">
 <label>Item Count:</label><input type="number" id="ItemCount">
 <label>Description:</label><input type="text" id="ItemDesc">
@@ -23,5 +20,6 @@
                                       document.getElementById('ItemDesc').value,
                                       document.getElementById('ItemPrice').value,
                                       sessionStorage.getItem('loggedIn'))" value="Add Item">
+</div>                                 
 </body>
 </html>
