--- a/FoodMarket/src/main/webapp/ItemPage.html
+++ b/FoodMarket/src/main/webapp/ItemPage.html
@@ -7,11 +7,16 @@
     async defer></script>
 </head>
 <body>
-<h1>Description</h1>
+<div class="topnav">
+  <a href="Landing.html">FoodMarket</a>
+  <a href="AddItem.html">Add Item</a>
+  <a href="UpdateInfo.html">Add Info</a>
+</div>
+<h2>Description</h2>
 <div id="Item description"></div>
-<h1>About the Seller</h1>
+<h2>About the Seller</h2>
 <div id="Seller"></div>
-<h1>Map</h1>
+<h2>Map</h2>
 <div id="Map">
  <script>
       var map;
